--- a/src/pages/checkout/checkoutHeader.css
+++ b/src/pages/checkout/checkoutHeader.css
@@ -53,6 +53,40 @@
     height: 26px;
   }
 }
+/* ##### Edited ######## */
+.checkout-header-left-section .chechout-header .chechout-.logo-1 {
+  width: 180px;
+  height: 26px;
+  color: #198754;
+  text-align: center;
+  font-size: 24px;
+  font-weight: bold;
+  letter-spacing: 1.1px;
+}
+.checkout-header-left-section .chechout-header .chechout-logo-1 .m {
+  font-size: 26px;
+  font-weight: 700;
+  display: inline;
+}
+@media (min-width: 676px) {
+  .checkout-header-left-section .chechout-header  .chechout-.mobile-logo-1 {
+    display: none;
+  }
+}
+@media (max-width: 675px) {
+  .checkout-header-left-section .chechout-header  .chechout-.logo-1 {
+    display: none;
+  }
+  .checkout-header-left-section .chechout-header  .chechout-mobile-logo-1 {
+    display: block;
+    height: 26px;
+    font-size: 26px;
+    font-weight: bolder;
+    color: white;
+  }
+  
+}
+/* ##### Edited ######## */
 
 .checkout-header .checkout-header-middle-section {
   flex: 1;
