--- a/src/pages/checkout/checkoutHeader.css
+++ b/src/pages/checkout/checkoutHeader.css
@@ -54,7 +54,7 @@
   }
 }
 /* ##### Edited ######## */
-.checkout-header-left-section .chechout-header .chechout-logo-1 {
+.checkout-header .checkout-header-left-section .checkout-logo-1 {
   width: 180px;
   height: 26px;
   color: #198754;
@@ -63,21 +63,21 @@
   font-weight: bold;
   letter-spacing: 1.1px;
 }
-.checkout-header-left-section .chechout-header .chechout-logo-1 .m {
+.checkout-header .checkout-header-left-section .checkout-logo-1 .m {
   font-size: 26px;
   font-weight: 700;
   display: inline;
 }
 @media (min-width: 676px) {
-  .checkout-header-left-section .chechout-header  .chechout-mobile-logo-1 {
+  .checkout-header .checkout-header-left-section .checkout-mobile-logo-1 {
     display: none;
   }
 }
 @media (max-width: 675px) {
-  .checkout-header-left-section .chechout-header  .chechout-logo-1 {
+  .checkout-header .checkout-header-left-section .checkout-logo-1 {
     display: none;
   }
-  .checkout-header-left-section .chechout-header  .chechout-mobile-logo-1 {
+  .checkout-header .checkout-header-left-section .checkout-mobile-logo-1 {
     display: block;
     height: 26px;
     font-size: 26px;
