--- a/src/pages/checkout/checkoutHeader.css
+++ b/src/pages/checkout/checkoutHeader.css
@@ -54,7 +54,7 @@
   }
 }
 /* ##### Edited ######## */
-.checkout-header .checkout-header-left-section .checkout-logo-1 {
+.checkout-header .checkout-logo-1 {
   width: 180px;
   height: 26px;
   color: #198754;
@@ -63,7 +63,7 @@
   font-weight: bold;
   letter-spacing: 1.1px;
 }
-.checkout-header .checkout-header-left-section .checkout-logo-1 .m {
+.checkout-header .checkout-logo-1 .m {
   font-size: 26px;
   font-weight: 700;
   display: inline;
