--- a/src/pages/checkout/checkoutHeader.css
+++ b/src/pages/checkout/checkoutHeader.css
@@ -45,30 +45,31 @@
     width: auto;
   }
 
-  .checkout-header .logo {
+  /* .checkout-header .logo {
     display: none;
   }
 
   .checkout-header .mobile-logo {
     display: inline-block;
     height: 26px;
+  } */
+
+  .checkout-header .checkout-logo-1 {
+    width: 180px;
+    height: 26px;
+    color: #198754;
+    text-align: center;
+    font-size: 24px;
+    font-weight: bold;
+    letter-spacing: 1.1px;
+  }
+  .checkout-header .checkout-logo-1 .m {
+    font-size: 26px;
+    font-weight: 700;
+    display: inline;
   }
 }
 /* ##### Edited ######## */
-.checkout-header .checkout-logo-1 {
-  width: 180px;
-  height: 26px;
-  color: #198754;
-  text-align: center;
-  font-size: 24px;
-  font-weight: bold;
-  letter-spacing: 1.1px;
-}
-.checkout-header .checkout-logo-1 .m {
-  font-size: 26px;
-  font-weight: 700;
-  display: inline;
-}
 @media (min-width: 676px) {
   .checkout-header .checkout-header-left-section .checkout-mobile-logo-1 {
     display: none;
