--- a/src/pages/checkout/checkoutHeader.css
+++ b/src/pages/checkout/checkoutHeader.css
@@ -35,6 +35,9 @@
   display: none;
 }
 /* ##### Edited ######## */
+.link {
+  text-decoration: none;
+}
 .check-logo-1 {
   width: 180px;
   height: 26px;
